@@ -354,3 +354,7 @@ test/vs2019/Debug Intel
 test/vs2019/Debug Intel - No STL
 EmbeddedTemplateLibrary-20.24.1.tar.gz
 test/etl_initializer_list/.vs
+test/build-etl_initializer_list-Desktop_x86_windows_msvc2019_pe_32bit-Debug
+test/build-etl_initializer_list-GCC-Debug
+test/etl_initializer_list/etl_initializer_list.vcxproj.filters
+test/etl_initializer_list/build-make
